[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["encyclopaedia/**"]

[tool.hatch.version]
path = "encyclopaedia/version.py"

[project]
name = "renpy-encyclopaedia"
authors = [
  { name="jsfehler" },
]
description = "A Ren'Py plugin to create an Encyclopaedia/Glossary/Bestiary or similar system."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/jsfehler/renpy-encyclopaedia"
"Bug Tracker" = "https://github.com/jsfehler/renpy-encyclopaedia/issues"
